--- a/docs/.vitepress/theme/custom.less
+++ b/docs/.vitepress/theme/custom.less
@@ -1,21 +1,27 @@
 /** 
   主题变量样式修改
 **/
-/* :root {
-  --vp-c-brand: #656dff;
-  --vp-c-brand-light: #757cff;
-} */
+:root {
+  // --vp-code-bg: #eef0f4;
+  // --vp-code-color: #555666;
+}
  
 /** 
   顶部导航模块样式修改
 **/
 pre, code {
-  // background-color: #f8f8f8!important;
+  // line-height: 35px;
 }
 code {
   // color: #333!important;
   font-family: '微软雅黑';
 }
+  // .menu-text::after {
+  //   content: '当前页';
+  // }
+  // .outline-title::after {
+  //   content: '当前页';
+  // }
 .container {
   // color: red!important;
   .details {
