阿峰的博客

--- a/docs/.vitepress/theme/custom.less
+++ b/docs/.vitepress/theme/custom.less
@@ -10,6 +10,9 @@
   --vp-c-brand-1: #42b883 !important;
   .vp-doc :not(pre) > code {
     color: #ff8380 !important;
+    display: inline-block;
+    height: 25px;
+    line-height: 25px;
   }
   .common-image {
     width: 60%;
@@ -81,9 +84,10 @@
 
     ul li::marker {
       color: #ff6881 !important;
-      font-size: 25px;
+      font-size: 20px;
     }
     ol li::marker {
+      color: #5184fa;
       font-size: 20px;
     }
     h1,
